# commitgen

./: .gitignore  pyproject.toml  test.md
commitgen/: cli.py  main.py
commitgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
